crates/gateway/log.txt
warning: C:\Users\Star\OneDrive\Documents\Important\Projects\Rust NPM Package\crates\pulsar-server\Cargo.toml: `default-features` is ignored for tracing-subscriber, since `default-features` was not specified for `workspace.dependencies.tracing-subscriber`, this could become a hard error in the future
    Checking gateway v0.1.0 (C:\Users\Star\OneDrive\Documents\Important\Projects\Rust NPM Package\crates\gateway)
warning: unused import: `Response`
 --> crates\gateway\src\main.rs:2:47
  |
2 | use http_server::{HttpServer, Router, Method, Response, ServerConfig};
  |                                               ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `pipeline_h`
  --> crates\gateway\src\main.rs:47:65
   |
37 |     let pipeline_h = Arc::clone(&pipeline);
   |         ---------- move occurs because `pipeline_h` has type `Arc<Pipeline>`, which does not implement the `Copy` trait
38 |     router.add_http(Method::GET, "/api/v1/:resource", Arc::new(move |req| {
   |                                                                ---------- value moved into closure here
39 |         let pipeline = Arc::clone(&pipeline_h);
   |                                    ---------- variable moved due to use in closure
...
47 |     router.add_http(Method::POST, "/api/v1/:resource", Arc::new(move |req| {
   |                                                                 ^^^^^^^^^^ value used here after move
48 |         let pipeline = Arc::clone(&pipeline_h);
   |                                    ---------- use occurs due to use in closure
   |
help: consider cloning the value before moving it into the closure
   |
38 ~     let value = pipeline_h.clone();
39 ~     router.add_http(Method::GET, "/api/v1/:resource", Arc::new(move |req| {
40 ~         let pipeline = Arc::clone(&value);
   |

For more information about this error, try `rustc --explain E0382`.
warning: `gateway` (bin "gateway") generated 1 warning
error: could not compile `gateway` (bin "gateway") due to 1 previous error; 1 warning emitted
